# leadr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  run_tests.yml  test-homebrew-update.yml  test-mac-release.yml
demo/: README.md  compress_video.sh  explain_demo.sh  mappings.toml  source_me.sh
packaging/homebrew/: leadr.rb
shell/: init.bash  init.fish  init.nu  init.zsh
shell/test/: README.md  mappings.toml  source_me.bash  source_me.fish  source_me.nu  source_me.sh  source_me.zsh
src/: config.rs  cursor.rs  error.rs  handler.rs  input.rs  keymap.rs  lib.rs  main.rs  mapping.rs  mappings.rs  models.rs  session.rs  shell.rs  types.rs  ui.rs
src/keybinding/: bash_zsh.rs  fish.rs  mod.rs  nushell.rs  parse.rs  shell_binding.rs
src/ui/: area.rs  color.rs  entry.rs  mod.rs  overlay.rs  panel.rs  prompt.rs  sequence_plotter.rs  symbols.rs  table.rs  theme.rs
