[package]
name = "leadr"
description = "Shell aliases on steroids"
version = "0.3.2"
edition = "2024"
license = "MIT"
authors = ["ll-nick"]
repository = "https://github.com/ll-nick/leadr"
readme = "README.md"
keywords = ["cli", "shortcuts", "terminal", "aliases", "shell"]
categories = ["command-line-utilities"]

[dependencies]
clap = {version = "4.5.37", features = ["derive"] }
confy = "0.6.1"
crossterm = "0.29.0"
serde = {version = "1.0.219", features = ["derive"]}
thiserror = "2.0.12"
