[package]
name = "leadr"
description = "Shell aliases on steroids"
version = "2.7.0"
edition = "2024"
license = "MIT"
authors = ["ll-nick"]
repository = "https://github.com/ll-nick/leadr"
readme = "README.md"
keywords = ["cli", "shortcuts", "terminal", "aliases", "shell"]
categories = ["command-line-utilities"]

[dependencies]
clap = {version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
serde = {version = "1.0.219", features = ["derive"]}
toml = "0.8.23"
thiserror = "2.0.12"
strip-ansi-escapes = "0.2.1"
unicode-width = "0.2.1"
mio = "1.1.0"
